--- a/templates/list_employees.html
+++ b/templates/list_employees.html
@@ -20,19 +20,19 @@
     <div class="rtable-cell no-border"></div> <!-- Damit die 3 Buttons nicht so weit auseinander sind -->
     <div class="rtable-cell no-border"></div> <!-- Damit die 3 Buttons nicht so weit auseinander sind -->
     <div class="rtable-cell nested-row-oriented-table no-border">
-        <p class="pseudo-button" data-href="/edit_employee">ändern</p>
+        <p class="pseudo-button" data-href="edit_employee">ändern</p>
     </div>
     <div class="rtable-cell nested-row-oriented-table no-border">
-        <p class="pseudo-button delete-button" data-href="/delete_employee">löschen</p>
+        <p class="pseudo-button delete-button" data-href="delete_employee">löschen</p>
     </div>
     <div class="rtable-cell nested-row-oriented-table no-border">
-        <p class="pseudo-button" data-href="/show_employee">anzeigen</p>
+        <p class="pseudo-button" data-href="show_employee">anzeigen</p>
     </div>
     <div class="rtable-cell no-border"></div> <!-- Damit die 3 Buttons nicht so weit auseinander sind -->
     <div class="rtable-cell no-border"></div> <!-- Damit die 3 Buttons nicht so weit auseinander sind -->
 </div>
 <div class="row-oriented-table rtable-1-cols">
     <div class="rtable-cell no-border nested-row-oriented-table">
-        <p class="pseudo-button" data-href="/add_employee">erfassen</p>
+        <p class="pseudo-button" data-href="add_employee">erfassen</p>
     </div>
 </div>
