--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 <div class="row-oriented-table rtable-2-cols">
     <div class="rtable-cell">Anzahl Mitarbeiter:</div>
-    <div class="rtable-cell">0</div>
+    <div class="rtable-cell">#context[0]#</div>
     <div class="rtable-cell">Anzahl Weiterbildungen in Planung:</div>
-    <div class="rtable-cell">0</div>
+    <div class="rtable-cell">#context[1]#</div>
     <div class="rtable-cell">Anzahl Weiterbildungen laufend:</div>
-    <div class="rtable-cell">0</div>
+    <div class="rtable-cell">#context[2]#</div>
     <div class="rtable-cell">Anzahl Weiterbildungen abgeschlossen:</div>
-    <div class="rtable-cell">0</div>
+    <div class="rtable-cell">#context[3]#</div>
 </div>
