--- a/templates/form_training.html
+++ b/templates/form_training.html
@@ -1,1 +1,101 @@
-Platzhalter form_training.html
+<form id="form" action="/save_training" method="POST">
+    <input type="hidden" value="#context[0]#" id="id_param" name="id_param" />
+    <div class="row-oriented-table rtable-2-cols">
+        <div class="rtable-cell">Bezeichnung</div>
+        <input type="text"
+                    class="rtable-cell"
+                    value="#context[1][0]#"
+                    id="bezeichnung"
+                    name="bezeichnung" required />
+        <div class="rtable-cell">Von</div>
+        <input type="date"
+                    class="rtable-cell"
+                    value="#context[1][1]#"
+                    id="von"
+                    name="von" required />
+        <div class="rtable-cell">Bis</div>
+        <input type="date"
+                    class="rtable-cell"
+                    value="#context[1][2]#"
+                    id="bis"
+                    name="bis" required />
+        <div class="rtable-cell">Beschreibung</div>
+        <input type="text"
+                    class="rtable-cell"
+                    value="#context[1][3]#"
+                    id="beschreibung"
+                    name="beschreibung" required />
+        <div class="rtable-cell">maximale Teilnehmeranzahl</div>
+        <input type="number"
+                    class="rtable-cell"
+                    value="#context[1][4]#"
+                    id="maxTeiln"
+                    name="maxTeiln" required />
+        <div class="rtable-cell">minimale Teilnehmeranzahl</div>
+        <input type="number"
+                    class="rtable-cell"
+                    value="#context[1][5]#"
+                    id="minTeiln"
+                    name="minTeiln" required />
+        <div class="rtable-cell">Haupt-Qualifikation</div>
+        @if context[1][6].length > 0@
+            <input type="text"
+                        class="rtable-cell"
+                        value="#context[1][6][0]#"
+                        id="qualification0"
+                        name="qualification0" required />
+        @else@
+            <input type="text"
+                        class="rtable-cell"
+                        value=""
+                        id="qualification0"
+                        name="qualification0" required />
+        @endif@
+        <div class="rtable-cell">Zertifikat (optional)</div>
+        @if context[1][7].lenth > 0@
+            <input type="text"
+                        class="rtable-cell"
+                        value="#context[1][7][0]#"
+                        id="zertifikat"
+                        name="zertifikat" />
+        @else@
+            <input type="text"
+                        class="rtable-cell"
+                        value=""
+                        id="zertifikat"
+                        name="zertifikat" />
+        @endif@
+    </div>
+    @if "#context[0]# != null && "#context[0]# != ''@
+        <div class="row-oriented-table rtable-1-cols">
+            <!-- Table Head -->
+            <div class="rtable-head">Weitere Qualifikationen</div>
+            <!-- Table Content -->
+            @for let i in context[1][6]@
+                @if i != 0@
+            <!------------------------------------- hier weiter morgen --------------------------------------------------------------------->
+                    <div class="rtable-cell">#context[1][6][i]#</div>
+                % endif
+            % endfor
+        </div>
+
+        <div class="rtable-cell nested-row-oriented-table">
+            <a class="pseudo-button nested-cell" href="/edit_qualification/${key}/${i}">ändern</a> <!-- TODO: Ändern-Formular implementieren -->
+            <a class="pseudo-button nested-cell delete-button" href="/delete_qualification/${key}/${i}">löschen</a> <!-- TODO: löschen implementieren -->
+        </div>
+
+        <div class="row-oriented-table rtable-1-cols">
+            <div class="rtable-cell">
+                <a href="/add_qualification/${key}" class="pseudo-button">weitere Qualifikation erfassen</a>
+            </div>
+        </div>
+    % endif
+    <div class="row-oriented-table rtable-2-cols">
+        <div class="rtable-cell no-border">
+            <a href="/list_trainings" class="pseudo-button submit-button">speichern</a>
+        </div>
+        <div class="rtable-cell no-border">
+            <a class="pseudo-button" href="/list_trainings">abbrechen</a>
+        </div>
+    </div>
+</form>
