--- a/templates/form_employee.html
+++ b/templates/form_employee.html
@@ -27,10 +27,10 @@
                     name="taetigkeit" required />
     </div>
     <div class="row-oriented-table rtable-2-cols">
-        <div class="rtable-cell">
+        <div class="rtable-cell no-border">
             <input type="submit" id="submit" value="speichern" class="pseudo-button"/>
         </div>
-        <div class="rtable-cell nested-row-oriented-table">
+        <div class="rtable-cell nested-row-oriented-table no-border">
             <p class="pseudo-button" id="cancel-button" data-href="list_employees">abbrechen</p>
         </div>
     </div>
