--- a/templates/evaluation_trainings.html
+++ b/templates/evaluation_trainings.html
@@ -1,1 +1,27 @@
-Platzhalter evaluation_trainings.html
+@for let i in context@
+    <ul>
+        <li>
+            <h2>Erfolgreiche Teilnehmer an "#context[i][1]#", vom #context[i][2]# bis #context[i][3]#:</h2>
+        </li>
+    </ul>
+    @if context[i][7].length > 0@
+        <div class="row-oriented-table rtable-4-cols">
+            <!-- Table Head -->
+            <div class="rtable-head">Name</div>
+            <div class="rtable-head">Vorname</div>
+            <div class="rtable-head">akademische Grade</div>
+            <div class="rtable-head">Tätigkeit</div>
+            <!-- Table Content -->
+            @for let j in context[i][7]@
+                <div class="rtable-cell">#context[i][7][j][0]#</div>
+                <div class="rtable-cell">#context[i][7][j][1]#</div>
+                <div class="rtable-cell">#context[i][7][j][2]#</div>
+                <div class="rtable-cell">#context[i][7][j][3]#</div>
+            @endfor@
+        </div>
+    @else@
+        <h3>
+            keine
+        </h3>
+    @endif@
+@endfor@
