--- a/templates/participation_employees.html
+++ b/templates/participation_employees.html
@@ -1,1 +1,21 @@
-Platzhalter participation_employees.html
+<div class="row-oriented-table rtable-4-cols">
+    <!-- Table Head -->
+    <div class="rtable-head">Name</div>
+    <div class="rtable-head">Vorname</div>
+    <div class="rtable-head">Akademische Grade</div>
+    <div class="rtable-head">Tätigkeit</div>
+    <!-- Table Content -->
+    @for i in context@
+        @entry = context[i];@
+        @id = "id-" + entry['id']@
+        <div class="#id# rtable-cell entry">#entry['Daten'][0]#</div>
+        <div class="#id# rtable-cell entry">#entry['Daten'][1]#</div>
+        <div class="#id# rtable-cell entry">#entry['Daten'][2]#</div>
+        <div class="#id# rtable-cell entry">#entry['Daten'][3]#</div>
+    @endfor@
+</div>
+<div class="row-oriented-table rtable-1-cols"></div>
+    <div class="rtable-cell nested-row-oriented-table no-border">
+        <p class="pseudo-button" data-href="participation_employee">auswählen</p>
+    </div>
+</div>
