--- a/templates/evaluation_certificates.html
+++ b/templates/evaluation_certificates.html
@@ -1,7 +1,7 @@
 @for let i in context@
     <ul>
         <li>
-            <h2>Mitarbeiter mit dem Zertifikat #context[i][1]#:</h2>
+            <h2>Mitarbeiter mit dem Zertifikat "#context[i][1]#":</h2>
         </li>
     </ul>
     @if context[i][2].length > 0@
