--- a/templates/list_employees.html
+++ b/templates/list_employees.html
@@ -23,7 +23,7 @@
         <p class="pseudo-button" data-href="edit_employee">ändern</p>
     </div>
     <div class="rtable-cell nested-row-oriented-table no-border">
-        <p class="pseudo-button delete-button" data-href="delete_employee">löschen</p>
+        <p class="pseudo-button delete-button" data-href="list_employees">löschen</p>
     </div>
     <div class="rtable-cell nested-row-oriented-table no-border">
         <p class="pseudo-button" data-href="show_employee">anzeigen</p>
