--- a/templates/list_trainings.html
+++ b/templates/list_trainings.html
@@ -27,7 +27,7 @@
         <p class="pseudo-button" data-href="edit_training">ändern</p>
     </div>
     <div class="rtable-cell nested-row-oriented-table no-border">
-        <p class="pseudo-button delete-button" href="delete_training">löschen</p>
+        <p class="pseudo-button delete-button" data-href="list_trainings">löschen</p>
     </div>
     <div class="rtable-cell nested-row-oriented-table no-border">
         <p class="pseudo-button" data-href="show_training">anzeigen</p>
