--- a/templates/form_training.html
+++ b/templates/form_training.html
@@ -84,7 +84,7 @@
                 <p class="pseudo-button" id="edit-qualification" data-href="edit_qualification">ändern</p>
             </div>
             <div class="rtable-cell no-border nested-row-oriented-table">
-                <p class="pseudo-button delete-button" data-href="delete_qualification">löschen</p>
+                <p class="pseudo-button delete-button" data-href="form_training">löschen</p>
             </div>
             <div class="rtable-cell no-border"></div> <!-- Damit die 2 Buttons nicht so weit auseinander sind -->
         </div>
